--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       "i choose you tanisha when youre upset because your heart deserves protection",
       "i choose you tanisha when you overthink because calming you matters to me",
       "i choose you tanisha every single day without hesitation",
-      "i choose you tanisha because without you i would have nothing to live for"
+      "i choose you tanisha because without you i would have nothing to live for",
       "i choose you tanisha when you smile because your happiness lights up my entire world",
 "i choose you tanisha when you laugh because it makes my heart skip beats",
 "i choose you tanisha when you are quiet because even your silence speaks to me",
@@ -132,8 +132,7 @@
 "i choose you tanisha when you are determined because your focus motivates me",
 "i choose you tanisha when you are soft because it reminds me to be gentle with you",
 "i choose you tanisha when you are amazing because you are the most amazing person in my life",
-"i choose you tanisha because my love for you is infinite and unstoppable"
-    "i choose you tanisha when you are thoughtful because every detail you notice makes me love you more",
+"i choose you tanisha because my love for you is infinite and unstoppable", "i choose you tanisha when you are thoughtful because every detail you notice makes me love you more",
 "i choose you tanisha when you are playful because your joy fills my heart",
 "i choose you tanisha when you are dreamy because your imagination amazes me",
 "i choose you tanisha when you are quiet because i want to hear every thought in your mind",
@@ -364,7 +363,7 @@
 "i choose you tanisha when you are quiet because your presence comforts me",
 "i choose you tanisha when you are shy because your softness melts me",
 "i choose you tanisha when you are bold because your bravery motivates me",
-"i choose you tanisha when you are loving because your heart is
+"i choose you tanisha when you are loving because your heart is so pure"
     ];
 
     let remaining = [...reasons];
